# ai-sidekick-for-splunk

./: .env  .env.example  .env.example.backup  .gitignore  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  __init__.py  agent.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  release-please.yml
cli/: add_agent.py  integrate_agent.py  setup_env.py  start_lab.py
contrib/: __init__.py
contrib/agents/: __init__.py
contrib/agents/data_explorer/: agent.py
contrib/agents/index_analyzer/: README.md  __init__.py  agent.py  prompt.py
contrib/agents/search_guru/: __init__.py  agent.py  agent.py.backup
contrib/flows/examples/: README.md
contrib/flows/helloworld/: README.md
contrib/tools/: __init__.py  splunk_info_tool.py
core/: __init__.py  base_agent.py  base_tool.py  config.py  discovery.py  logging_config.py  orchestrator.py  orchestrator.py.backup  orchestrator_prompt.py  orchestrator_prompt_lab.py  registry.py
core/agents/: __init__.py
core/agents/flow_pilot/: __init__.py
core/agents/index_analysis_flow/: __init__.py
core/agents/researcher/: __init__.py  agent.py  prompt.py
core/agents/result_synthesizer/: agent.py  prompt.py
core/agents/splunk_mcp/: agent.py
core/flows/health_check/: README.md
core/flows/index_analysis/: README.md  index_analysis.json
core/flows/system_info/: README.md
core/flows_engine/: micro_agent_builder.py  workflow_discovery.py
core/utils/: logging_config.py
docs/: GETTING_STARTED.md
scripts/: check-prerequisites.py  create_flow_agent.py  generate_workflow_template.py  smart-install.ps1  smart-install.py  smart-install.sh
scripts/lab/: WORKSHOP-API-KEY-GUIDE.md  check-prerequisites.ps1  check-prerequisites.sh  restart-lab-setup.ps1  restart-lab-setup.sh  setup-env.sh  setup-local-llm-backup.sh  start-lab-setup.ps1  start-lab-setup.sh  stop-lab-setup.ps1  stop-lab-setup.sh  switch-orchestrator-mode.ps1  switch-orchestrator-mode.sh
services/: __init__.py  setup_runner.py
src/: agent.py
src/ai_sidekick_for_splunk/: __init__.py  agent.py
src/ai_sidekick_for_splunk/cli/: add_agent.py  create_agent_cli.py  create_flow_agent.py  create_template.py  generate_workflow_template_cli.py  integrate_agent.py  main.py  setup_env.py  (+4 more)
src/cli/: start_lab.py
src/core/: config.py  orchestrator_prompt_lab.py
tests/: test_basic.py
(+131 files in other folders)
